# matomo-mcp

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  glama.json  server.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish-mcp.yml  release.yml
docs/: ARCHITECTURE.md  announcements.md
src/: client.rs  config.rs  lib.rs  main.rs  server.rs  tools.rs
tests/: client_integration.rs
