[package]
name = "matomo-mcp"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
description = "Fast, curated MCP server for Matomo Analytics — ask your analytics anything from Claude, Cursor, or any MCP client"
authors = ["Lionel Machire"]
license = "MIT"
repository = "https://github.com/Liohtml/matomo-mcp"
homepage = "https://github.com/Liohtml/matomo-mcp"
documentation = "https://github.com/Liohtml/matomo-mcp#readme"
readme = "README.md"
keywords = ["mcp", "matomo", "analytics", "ai", "llm"]
categories = ["command-line-utilities", "web-programming"]
exclude = ["assets/", ".github/", "docs/"]

[dependencies]
rmcp = { version = "0.12", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1"
thiserror = "2"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

[dev-dependencies]
wiremock = "0.6"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
